@@ -2682,6 +2682,9 @@ Two forms of URI are recognized:
        someone@somewhere.com
 
 Punctuation at the end of a URI is not considered part of the URI.
+Backslashes may be used in URIs to escape markup characters,
+specifically asterisks ("*") and underscores ("_") which are vaid URI
+characters (see `Escaping Mechanism`_ above).
 
 .. [#URI] Uniform Resource Identifier.  URIs are a general form of
    URLs (Uniform Resource Locators).  For the syntax of URIs see
